# Suffix-Array

./: README.md
suffix/: CMakeLists.txt
suffix/suffix/: CMakeLists.txt  suffix.cpp  suffix.hpp
suffix/suffix/test/: BigTest.txt  CMakeLists.txt  NormalTest.cpp  RadixTest.cpp  SuffixTest.cpp
